export enum RuleType {
  USER_ALLOW_LIST = 'USER_ALLOW_LIST',
  ATTRIBUTE_MATCH = 'ATTRIBUTE_MATCH',
  PERCENTAGE_ROLLOUT = 'PERCENTAGE_ROLLOUT',
  DEFAULT = 'DEFAULT'
}
